--- a/index.html
+++ b/index.html
@@ -11,106 +11,106 @@
     <main id="main">
         <section class="calc-section-container">
             <div class="calc-screen" id="result"> 
-                <span class="default-zero">
+                <span class="rmv">
                     0
                 </span>
             </div>
             <div class="calc-keyboard">
-                    <button class="all-clear calc-buttons">
-                        <span>
-                            AC
-                        </span>
-                    </button>
-                    <button class="plus-minus calc-buttons">
-                        <span>
-                            ⁺/₋
-                        </span>
-                    </button>
-                    <button class="percent calc-buttons">
-                        <span>
-                            %
-                        </span>
-                    </button>
-                    <button class="division calc-buttons">
-                        <span>
-                            ÷
-                        </span>
-                    </button>
-                    <button class="seven calc-buttons">
-                        <span>
-                            7
-                        </span>
-                    </button>
-                    <button class="eight calc-buttons">
-                        <span>
-                            8
-                        </span>
-                    </button>
-                    <button class="nine calc-buttons">
-                        <span>
-                            9
-                        </span>
-                    </button>
-                    <button class="multiply calc-buttons">
-                        <span>
-                            x
-                        </span>
-                    </button>
-                    <button class="four calc-buttons">
-                        <span>
-                            4
-                        </span>
-                    </button>
-                    <button class="five calc-buttons">
-                        <span>
-                            5
-                        </span>
-                    </button>
-                    <button class="six calc-buttons">
-                        <span>
-                            6
-                        </span>
-                    </button>
-                    <button class="subtract calc-buttons">
-                        <span>
-                            -
-                        </span>
-                    </button>
-                    <button class="one calc-buttons">
-                        <span>
-                            1
-                        </span>
-                    </button>
-                    <button class="two calc-buttons">
-                        <span>
-                            2
-                        </span>
-                    </button>
-                    <button class="three calc-buttons">
-                        <span>
-                            3
-                        </span>
-                    </button>
-                    <button class="plus calc-buttons">
-                        <span>
-                            +
-                        </span>
-                    </button>
-                    <button class="zero calc-buttons">
-                        <span>
-                            0
-                        </span>
-                    </button>
-                    <button class="decimal-separator calc-buttons">
-                        <span>
-                            .
-                        </span>
-                    </button>
-                    <button class="equals-sign calc-buttons">
-                        <span>
-                            =
-                        </span>
-                    </button>
+                <button class="all-clear calc-buttons">
+                    <span>
+                        AC
+                    </span>
+                </button>
+                <button class="plus-minus calc-buttons">
+                    <span>
+                        ±
+                    </span>
+                </button>
+                <button class="percent calc-buttons">
+                    <span>
+                        %
+                    </span>
+                </button>
+                <button class="division calc-buttons">
+                    <span>
+                        /
+                    </span>
+                </button>
+                <button class="seven calc-buttons">
+                    <span>
+                        7
+                    </span>
+                </button>
+                <button class="eight calc-buttons">
+                    <span>
+                        8
+                    </span>
+                </button>
+                <button class="nine calc-buttons">
+                    <span>
+                        9
+                    </span>
+                </button>
+                <button class="multiply calc-buttons">
+                    <span>
+                        *
+                    </span>
+                </button>
+                <button class="four calc-buttons">
+                    <span>
+                        4
+                    </span>
+                </button>
+                <button class="five calc-buttons">
+                    <span>
+                        5
+                    </span>
+                </button>
+                <button class="six calc-buttons">
+                    <span>
+                        6
+                    </span>
+                </button>
+                <button class="subtract calc-buttons">
+                    <span>
+                        -
+                    </span>
+                </button>
+                <button class="one calc-buttons">
+                    <span>
+                        1
+                    </span>
+                </button>
+                <button class="two calc-buttons">
+                    <span>
+                        2
+                    </span>
+                </button>
+                <button class="three calc-buttons">
+                    <span>
+                        3
+                    </span>
+                </button>
+                <button class="plus calc-buttons">
+                    <span>
+                        +
+                    </span>
+                </button>
+                <button class="zero calc-buttons">
+                    <span>
+                        0
+                    </span>
+                </button>
+                <button class="decimal-separator calc-buttons">
+                    <span>
+                        .
+                    </span>
+                </button>
+                <button class="equals-sign calc-buttons">
+                    <span>
+                        =
+                    </span>
+                </button>
             </div>
         </section>
     </main>
