--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.5.0/math.min.js" type="text/javascript"></script>
 </head>
 <body>
     <main id="main">
