--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main id="main">
         <section class="calc-section-container">
             <div class="calc-screen" id="result"> 
-                <span class="rmv">
+                <span>
                     0
                 </span>
             </div>
